--- a/consumption.html
+++ b/consumption.html
@@ -38,7 +38,7 @@
     </nav>
 
     <main class="container-fluid p-0 vh-100 p-title">
-        <div class="row w-100 h-100 m-0">
+        <div class="row w-100 h-100 m-0 overflow-hidden">
             <div class="teach-box h-100 d-flex align-items-center justify-content-center flex-wrap show">
                 <h3 class="w-100 text-center align-self-end text-white mt-1 mb-0">STORE</h3>
                 <div class="teach-msg-box flex-column" style="display:flex;">
