pc加下一張圖

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                     <img src="https://picsum.photos/id/686/600/400" class="d-block w-100" alt="...">
                 </div>
             </div>
-            <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <a class="carousel-control-prev pc-only" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <a class="carousel-control-next pc-only" href="#carouselExampleIndicators" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
-            </a> -->
+            </a>
         </div>
 
         <div class="row w-100 m-0 align-items-center justify-content-around overflow-hidden vh-100 bg-secondary pc-only">
