--- a/new_game.html
+++ b/new_game.html
@@ -208,11 +208,42 @@
                 </div>
             </div>
         </div>
+
+        <!-- product -->
+        <div class="modal fade p-0" id="productDescription" tabindex="-1" role="dialog" aria-labelledby="productDescription" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content my-5 text-light">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="GameName"></h5>
+                        <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="pageImg" class="w-100 img-box">
+                            <img src="" class="card-img-top" alt="...">
+                        </div>
+                    </div>
+                    <!-- <div class="d-flex px-3 pb-3 justify-content-between">
+                        <a id="Link1" href="https://www.pay69slot.com/%E0%B8%AA%E0%B8%A5%E0%B9%87%E0%B8%AD%E0%B8%95?brand=PG,JILI,RT,BNG,JOKER,SG,FC,JDB,PL,MGP,ISB,CQ9,KA,PNG,RSG,PTO,HBN&gameSelectType=all" class="btn btn-outline-warning w-48">ทดลองเล่น</a>
+                        <a id="Link2" href="https://www.pay69slot.com/%E0%B8%AA%E0%B8%A5%E0%B9%87%E0%B8%AD%E0%B8%95?brand=PG,JILI,RT,BNG,JOKER,SG,FC,JDB,PL,MGP,ISB,CQ9,KA,PNG,RSG,PTO,HBN&gameSelectType=all" class="btn btn-outline-warning w-48">เล่นเลย</a>
+                    </div> -->
+                    <div class="modal-footer flex-column align-items-start">
+                        <h5>◆ดัชนีแนะนำ◆</h5>
+                        <p class="mb-0" id="GameMain1"></p>
+                        <p class="mb-0" id="GameMain2"></p>
+                        <p class="mb-0" id="GameMain3"></p>
+                        <p class="mb-0" id="GameMain4"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
         
     </main>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="js/myJS.js"></script>
 </body>
 </html>
