--- a/new_index.html
+++ b/new_index.html
@@ -119,7 +119,8 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
-                    </div>            
+                    </div> 
+                    <div class="position-relative w-100 text-center d-flex align-items-center justify-content-end px-3"><a class="text-warning" href="">More&rarr;</a></div>           
                 </div>
             </div>
 
