--- a/new_game.html
+++ b/new_game.html
@@ -27,10 +27,10 @@
                     <a class="logo nav-link position-relative" href="new_index.html"><img class="logo-img position-absolute w-100" src="images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="consumption.html">Consumption</a>
+                    <a class="nav-link disabled" href="consumption.html">Consumption</a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="introduction.html">Introduction</a>
+                    <a class="nav-link disabled" href="introduction.html">Introduction</a>
                 </li>
             </ul>
         </div>
