--- a/new_index.html
+++ b/new_index.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto mx-auto">
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link" href="new_game.html">Games</a>
@@ -27,10 +27,10 @@
                     <a class="logo nav-link position-relative" href="index.html"><img class="logo-img position-absolute w-100" src="images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="consumption.html">Consumption</a>
+                    <a class="nav-link disabled" href="consumption.html">Consumption</a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link active" href="introduction.html">Introduction</a>
+                    <a class="nav-link disabled" href="introduction.html">Introduction</a>
                 </li>
             </ul>
         </div>
