--- a/new_promotions.html
+++ b/new_promotions.html
@@ -26,7 +26,7 @@
                     <a class="logo nav-link position-relative" href="new_index.html"><img class="logo-img position-absolute w-100" src="images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link disabled" href="consumption.html">Promotions</a>
+                    <a class="nav-link disabled" href="new_promotions.html">Promotions</a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link disabled" href="introduction.html">Introduction</a>
@@ -36,7 +36,7 @@
     </nav>
 
     <main class="container-fluid p-0 p-title promotions">
-        
+
     </main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
