--- a/new_game.html
+++ b/new_game.html
@@ -27,7 +27,7 @@
                     <a class="logo nav-link position-relative" href="new_index.html"><img class="logo-img position-absolute w-100" src="images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link disabled" href="consumption.html">Promotions</a>
+                    <a class="nav-link disabled" href="new_promotions.html">Promotions</a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link disabled" href="introduction.html">Introduction</a>
