--- a/new_index.html
+++ b/new_index.html
@@ -18,16 +18,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto mx-auto">
                 <li class="nav-item text-center">
-                    <a class="nav-link active" href="index.html">Home</a>
+                    <a class="nav-link active" href="new_index.html">Home</a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link" href="new_game.html">Games</a>
                 </li>
                 <li class="nav-item text-center pc-only">
-                    <a class="logo nav-link position-relative" href="index.html"><img class="logo-img position-absolute w-100" src="images/logo.png" alt=""></a>
+                    <a class="logo nav-link position-relative" href="new_index.html"><img class="logo-img position-absolute w-100" src="images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link disabled" href="consumption.html">Promotions</a>
+                    <a class="nav-link disabled" href="new_promotions.html">Promotions</a>
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link disabled" href="introduction.html">Introduction</a>
