--- a/new_index.html
+++ b/new_index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark bg-dark align-items-center justify-content-end w-100 top-0">
-        <a class="logo nav-link position-absolute p-0 ph-only" href="index.html"><img class="logo-img w-100" src="images/logo.png" alt=""></a>
+        <a class="logo nav-link position-absolute p-0 ph-only" href="new_index.html"><img class="logo-img w-100" src="images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
