關於我們 / 遊戲頁改成json檔載入 / 測試偵測系統

--- a/new_game.html
+++ b/new_game.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="new_promotions.html">Promotions</a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link disabled" href="introduction.html">Introduction</a>
+                    <a class="nav-link" href="new_contact.html">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -67,7 +67,7 @@
                                 <img src="images/1.JPG" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Stage 888</h5>
-                                <a name="btn" data-no="0" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="0" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                                 <img src="images/2.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Crazy Genie</h5>
-                                <a name="btn" data-no="1"  data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="1" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                                 <img src="images/3.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Elven Magic</h5>
-                                <a name="btn" data-no="2" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="2" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                                 <img src="images/4.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Jingle Bells</h5>
-                                <a name="btn" data-no="3" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="3" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                                 <img src="images/5.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Red Diamond</h5>
-                                <a name="btn" data-no="4" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="4" data-kids="slots" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                                 <img src="images/1.JPG" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Stage 888</h5>
-                                <a name="btn" data-no="0" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="0" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                                 <img src="images/2.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Crazy Genie</h5>
-                                <a name="btn" data-no="1"  data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="1" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -137,7 +137,7 @@
                                 <img src="images/3.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Elven Magic</h5>
-                                <a name="btn" data-no="2" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="2" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -146,7 +146,7 @@
                                 <img src="images/4.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Jingle Bells</h5>
-                                <a name="btn" data-no="3" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="3" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                 <img src="images/5.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Red Diamond</h5>
-                                <a name="btn" data-no="4" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="4" data-kids="fishing" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                                 <img src="images/1.JPG" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Stage 888</h5>
-                                <a name="btn" data-no="0" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
                                 <img src="images/2.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Crazy Genie</h5>
-                                <a name="btn" data-no="1"  data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="1" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                                 <img src="images/3.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Elven Magic</h5>
-                                <a name="btn" data-no="2" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="2" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                                 <img src="images/4.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Jingle Bells</h5>
-                                <a name="btn" data-no="3" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="3" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                                 <img src="images/5.jpg" class="card-img-top" alt="...">
                                 <div class="card-body d-flex flex-column justify-content-between">
                                 <h5 class="card-title">Red Diamond</h5>
-                                <a name="btn" data-no="4" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                <a name="btn" data-no="4" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
                                 </div>
                             </div>
                         </div>
@@ -252,5 +252,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="js/myJS.js"></script>
+    <script src="https://unpkg.com/vue@2.3.4/dist/vue.js"></script>
 </body>
 </html>
