--- a/new_promotions.html
+++ b/new_promotions.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="new_promotions.html">Promotions</a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link disabled" href="introduction.html">Introduction</a>
+                    <a class="nav-link" href="new_contact.html">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -131,5 +131,6 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/vue@2.3.4/dist/vue.js"></script>
 </body>
 </html>
