--- a/new_index.html
+++ b/new_index.html
@@ -217,9 +217,9 @@
         let u = navigator.userAgent;
         let isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android終端
         let isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios終端
-        if(isAndroid = true){
+        if(isAndroid = 'true'){
             alert(1)
-        }else if(isAndroid = true){
+        }else if(isAndroid = 'true'){
             alert(2)
         }
     </script>
