修改購買鑽石頁

--- a/en_diamond.html
+++ b/en_diamond.html
@@ -129,8 +129,8 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="images/diamonds_01.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">105 PHP</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                                <h5 class="card-title text-center">105 UP</h5>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 162</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -138,8 +138,8 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth popular">
                                                 <img src="images/diamonds_02.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">210 PHP</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                                <h5 class="card-title text-center">210 UP</h5>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 324</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -147,8 +147,8 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="images/diamonds_03.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">315 PHP</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                                <h5 class="card-title text-center">315 UP</h5>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 486</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -156,8 +156,8 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="images/diamonds_04.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">530 PHP</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                                <h5 class="card-title text-center">530 UP</h5>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 810</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -165,8 +165,8 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="images/diamonds_05.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">1060 PHP</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                                <h5 class="card-title text-center">1060 UP</h5>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 1620</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -174,8 +174,8 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth best">
                                                 <img src="images/diamonds_05.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">3180 PHP</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">คำอธิบาย</a>
+                                                <h5 class="card-title text-center">3180 UP</h5>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 4860</a>
                                                 </div>
                                             </div>
                                         </div>
