--- a/en/game.html
+++ b/en/game.html
@@ -11,29 +11,29 @@
 </head>
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark align-items-center justify-content-end w-100 top-0">
-        <a class="logo nav-link position-absolute p-0 ph-only" href="en_index.html"><img class="logo-img w-100" src="images/logo.png" alt=""></a>
+        <a class="logo nav-link position-absolute p-0 ph-only" href="index.html"><img class="logo-img w-100" src="images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto mx-auto">
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="en_index.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link active" href="en_game.html">Games</a>
+                    <a class="nav-link active" href="game.html">Games</a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="en_promotions.html">Promotions</a>
+                    <a class="nav-link" href="promotions.html">Promotions</a>
                 </li>
                 <li class="nav-item text-center pc-only">
-                    <a class="logo nav-link position-relative" href="en_index.html"><img class="logo-img position-absolute w-100" src="images/logo.png" alt=""></a>
+                    <a class="logo nav-link position-relative" href="index.html"><img class="logo-img position-absolute w-100" src="images/logo.png" alt=""></a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="en_diamond.html">Diamond</a>
+                    <a class="nav-link" href="diamond.html">Diamond</a>
                 </li>
                 <li class="nav-item text-center">
-                    <a class="nav-link" href="en_contact.html">Contact Us</a>
+                    <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item dropdown text-center">
                     <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
